# data-hub-helpcentre

./: .gitignore  .pii-secret-exclude  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  create_user.sql  cypress.config.js  docker-compose.yml  entrypoint-local.sh  entrypoint.sh  gulpfile.js  manage.py  manifest.yml  package-lock.json  package.json  pii-ner-exclude.txt  pii-secret-exclude.txt  pyproject.toml  requirements-dev.txt  requirements.txt  sample.env
.circleci/: config.yml
.copilot/: config.yml  image_build_run.sh
.copilot/phases/: pre_build.sh
.pii-secret-hook/file_content/: pii-secret-log
.pii-secret-hook/ner/: pii-secret-log
api/: apps.py  hawk.py  models.py  test.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20190712_1537.py  0003_auto_20190712_1558.py  0004_auto_20190718_1313.py  0005_auto_20190726_0804.py  0006_articlepage_author.py  0007_auto_20190806_0913.py  0008_articlehomepage.py  0009_articlehomepage_show_recent_child_articles.py  0010_auto_20200206_1524.py  0011_create_accessibility_statement_20201027.py  0012_auto_20210420_1629.py
api_pipeline/: factories.py  serializers.py  test.py  urls.py  views.py
api_v1/: urls.py
api_v1/inline_feedback/: serializers.py  tests.py  urls.py  views.py
app/: Dockerfile  manage.py  requirements.txt  sample.env  start.sh
app/article/: models.py  urls.py  views.py
app/helpcentre/: context.py  middlewares.py  urls.py  utils.py  wsgi.py  (+1 more)
article/: apps.py  blocks.py  hawk.py  models.py  serializers.py  test.py  urls.py  views.py
config/: cf_env.py  context.py  env.py  middlewares.py  urls.py  utils.py  views_healthcheck.py  wsgi.py
docs/: test_suite.md
helpcentre/: context.py  middlewares.py  urls.py  utils.py  views_healthcheck.py
helpdesk/: Dockerfile  requirements.txt  start.sh
home/: models.py
inline_feedback/: apps.py  models.py
pingdom/: services.py  views.py
requirements/: base.in  base.txt  dev.in  dev.txt  prod.in  prod.txt
requirements.in/: base.in  dev.in  prod.in
search/: views.py
setup/: init.sql
templates/: 404.html  500.html  base.html  feedback.html  search_partial.html
user/: backends.py  models.py
venv-data-hub-helpcentre/: pyvenv.cfg
(+146 files in other folders)
