# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python. Multiline strings are treated as
# verbose regular expressions by Black. Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 100
target-version = ['py37']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | _build
  | env
  | .venv
  | .js
  | tests-reports
)/
'''

[tool.poetry]
name = "data-hub-helpcentre"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
autopep8 = "1.4.4"
beautifulsoup4 = "4.8.2"
boto3 = "^1.17.92"
botocore = "^1.20.92"
certifi = "2023.7.22"
chardet = "3.0.4"
dj-database-url = "0.5.0"
django = "^3.2.25"
django-compressor = "^4.3.1"
django-environ = "0.4.5"
django-log-formatter-asim = "^0.0.5"
django-log-formatter-ecs = "^0.0.5"
django-oauth-toolkit = "1.2.0"
django-sass-processor = "^1.2.2"
django-simple-history = "^3.3.0"
django-staff-sso-client = "^3.1.0"
django-storages = "1.11.1"
django-taggit = "^2.1.0"
djangorestframework = "^3.11.2"
docutils = "0.14"
draftjs-exporter = "2.1.6"
html5lib = "1.0.1"
idna = "3.7"
jmespath = "0.9.4"
libsass = "^0.22.0"
mohawk = "^1.1.0"
oauthlib = "3.0.2"
pillow = "10.3.0"
psycopg2 = "^2.9.6"
pycodestyle = "^2.10.0"
python-dateutil = "2.8.0"
pytz = "^2020.1"
raven = "6.10.0"
requests = "2.32.0"
requests-oauthlib = "1.2.0"
s3transfer = "^0.4.2"
sentry-sdk = "2.8.0"
six = "^1.12.0"
soupsieve = "2.0.1"
sqlparse = "0.5.0"
unidecode = "1.1.1"
urllib3 = "^1.26.18"
wagtail = "^5.0"
wagtailcodeblock = "^1.17.1.0"
waitress = "2.1.2"
wand = "0.5.5"
webencodings = "0.5.1"
whitenoise = "^5.2.0"
xlsxwriter = "1.2.8"
gevent = "^23.9.0"



[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
coverage = "^7.2.3"
freezegun = "^1.2.2"
flake8 = "^6.0.0"

[tool.poetry.group.production.dependencies]
elastic-apm = "^6.15.1"
django-audit-log-middleware = "^0.0.4"
gevent = ">=23.9.0"
psycogreen = "^1.0.2"
greenlet = ">=2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
